--- a/Aula1/projeto-receitas/index.html
+++ b/Aula1/projeto-receitas/index.html
@@ -11,6 +11,7 @@
         <li><a href="./receitas/arroz_com_linguica.html">Arroz com linguiça</a></li>
         <li><a href="./receitas/file_de_peixe_assado.html">Filé de peixe assado</a></li>
         <li><a href="./receitas/lasanha_de_biringela.html">Lasanha de biringela</a></li>
+        <li><a href="../../index.html"><strong>Voltar ao índice de aulas</strong></a></li>
     </ul>
 </body>
 </html>
