--- a/Aula1/projeto-receitas/receitas/arroz_com_linguica.html
+++ b/Aula1/projeto-receitas/receitas/arroz_com_linguica.html
@@ -36,7 +36,7 @@
       <li>Cozinhe no mesmo ponto que costuma cozinhar o seu arroz, quando terminar, coloque o coentro e mexa bem, e bom apetite!</li>
     </ol>
     <p>
-      Para ao o menu de receitas clique <a href="../index.html"><em>AQUI</em></a>
+      Para retornar ao o menu de receitas clique <a href="../index.html"><em>AQUI</em></a>
     </p>
   </body>
 </html>
