--- a/Aula1/projeto-receitas/receitas/file_de_peixe_assado.html
+++ b/Aula1/projeto-receitas/receitas/file_de_peixe_assado.html
@@ -41,7 +41,7 @@
       <li>Sirva com arroz intergal ou branco, é uma delícia!</li>
     </ol>
     <p>
-      Para ao o menu de receitas clique <a href="../index.html"><em>AQUI</em></a>
+      Para retornar ao o menu de receitas clique <a href="../index.html"><em>AQUI</em></a>
     </p>
   </body>
 </html>
