--- a/Aula1/projeto-receitas/receitas/lasanha_de_biringela.html
+++ b/Aula1/projeto-receitas/receitas/lasanha_de_biringela.html
@@ -42,7 +42,7 @@
       <li>Sirva quente.</li>
     </ol>
     <p>
-      Para ao o menu de receitas clique <a href="../index.html"><em>AQUI</em></a>
+      Para retornar ao o menu de receitas clique <a href="../index.html"><em>AQUI</em></a>
     </p>
   </body>
 </html>
