--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <h1>Sumário de aulas</h1>
     <p>
       Aqui você irá encontrar todo o conteúdo do curso formação FullStack oferecido pela 3Way. <br />Neste sumário irá constar toda evolução desde a aula 1.
-      <p><strong>Professor:</strong>Elisandro</p>
     </p>
+    <p><strong>Professor:</strong>Elisandro</p>
     <p></p>
     <h2>Acesso as aulas</h2>
     <ol>
-      <li><a href="./Aula1/index.html">Aula 1</a></li>
+      <li><a href="./Aula1/index.html">Aula 1 - Fundamentos HTML</a></li>
+      <li><a href="./Aula2/index.html">Aula 2 - Fundamento CSS</a></li>
     </ol>
   </body>
 </html>
