correcao em aula

--- a/Aula2/exercicios/exerc1.html
+++ b/Aula2/exercicios/exerc1.html
@@ -11,7 +11,6 @@
         color: white;
         background-color: green;
         font-size: x-large;
-        margin: 0px 490px 0px;
       }
     </style>
   </head>
@@ -27,7 +26,7 @@
         <p>I would to be styled with the internal method, please.</p>
       </div>
 
-      <button style="background-color: orange; font-size: large; margin: 0px 900px 0px 490px; border: 1px solid gray">Inline Method</button>
+      <button style="background-color: orange; font-size: 18px;">Inline Method</button>
 
       <p>
         <a href="../index.html">Para retornar ao índice de exercícios clique <em>Aqui</em></a>
