--- a/Aula2/exercicios/exerc3.html
+++ b/Aula2/exercicios/exerc3.html
@@ -9,8 +9,8 @@
   <body>
     <!--Exercício 3-Seletores de Agrupamento-->
     <p class="titulo"><strong>3-Seletores de Agrupamento</strong></p>
-    <button class="style-button primary-button">Click Me!</button>
-    <button class="style-button secondary-button">No, Click Me!</button>
+    <button class="btn-1">Click Me!</button>
+    <button class="btn-2">No, Click Me!</button>
     <p>
       <a href="../index.html">Para retornar ao índice de exercícios clique <em>Aqui</em></a>
     </p>
