--- a/Aula2/exercicios/exerc6.html
+++ b/Aula2/exercicios/exerc6.html
@@ -9,7 +9,7 @@
   <body>
     <!--Exercício 6-Prática 1 de margin e padding-->
     <p class="titulo"><strong>6-Prática 1 de margin e padding</strong></p>
-    <div class="max-width">
+    <div class="body-max-width">
       <div class="one">DIV ONE</div>
       <div class="two">DIV TWO</div>
       <div class="three">DIV THREE</div>
