--- a/Aula2/index.html
+++ b/Aula2/index.html
@@ -11,6 +11,8 @@
       <li><a href="./exercicios/exerc1.html">Exercício 1</a></li>
       <li><a href="./exercicios/exerc2.html">Exercício 2</a></li>
       <li><a href="./exercicios/exerc3.html">Exercício 3</a></li>
+      <li><a href="./exercicios/exerc4.html">Exercício 4</a></li>
+      <li><a href="./exercicios/exerc5.html">Exercício 5</a></li>
       <li><a href="./exercicios/exerc6.html">Exercício 6</a></li>
       <li><a href="./exercicios/exerc7.html">Exercício 7</a></li>
       <li>
