--- a/Aula2/exercicios/exerc2.html
+++ b/Aula2/exercicios/exerc2.html
@@ -10,11 +10,11 @@
     <!--Exercício 2-Seletores de classe e ID-->
     <div>
       <p class="titulo"><strong>Exercício 2-Seletores de classe e ID</strong></p>
-      <p class="p-impar">Number 1 - I'm a class!</p>
-      <div class="element-2">Number 2 - I'm one ID.</div>
-      <p class="p-impar text-cooler">Number 3 - I'm a class, but coller!</p>
-      <div class="element-4">Number 4 - I'm another ID.</div>
-      <p class="p-impar">Number 5 - I'm a class!</p>
+      <p class="number-1">Number 1 - I'm a class!</p>
+      <div id="number-2">Number 2 - I'm one ID.</div>
+      <p class="number-3">Number 3 - I'm a class, but coller!</p>
+      <div id="number-4">Number 4 - I'm another ID.</div>
+      <p class="number-5">Number 5 - I'm a class!</p>
       <p>
         <a href="../index.html">Para retornar ao índice de exercícios clique <em>Aqui</em></a>
       </p>
