--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <ol>
       <li><a href="./Aula1/index.html">Aula 1 - Fundamentos HTML</a></li>
       <li><a href="./Aula2/index.html">Aula 2 - Fundamento CSS</a></li>
+      <li><a href="./Aula3/index.html">Aula 3 - FlexBox</a></li>
     </ol>
   </body>
 </html>
