--- a/Aula3/index.html
+++ b/Aula3/index.html
@@ -44,5 +44,9 @@
         <div class="three"></div>
     </div>
 
+    <br>
+
+    <a href="./exercicios/index.html">Exercícios da aula 3. Clique aqui</a>
+
   </body>
 </html>
