exercicios display:flex

--- a/Aula3/exercicios/exec5/exec5.html
+++ b/Aula3/exercicios/exec5/exec5.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exercício 5</title>
     <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    
-    <br>
+  </head>
+  <body>
+    <div class="modal">
+      <div class="cabecalho">
+        <div class="icon">!</div>
+        <div class="header">Are you sure you want to do that?</div>
+        <div class="close-button">✖</div>
+      </div>
+      <div class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae
+        commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!
+      </div>
+      <button class="continue">Continue</button>
+      <button class="cancel">Cancel</button>
+    </div>
 
-    <a href="../index.html">Retornar ao índice de exercícios</a>
-</body>
+    <br />
+
+    <div class="ancora">
+      <a href="../index.html">Retornar ao índice de exercícios</a>
+    </div>
+  </body>
 </html>
