--- a/Aula3/exercicios/exec5/exec5.html
+++ b/Aula3/exercicios/exec5/exec5.html
@@ -7,24 +7,35 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="modal">
-      <div class="cabecalho">
-        <div class="icon">!</div>
-        <div class="header">Are you sure you want to do that?</div>
-        <div class="close-button">✖</div>
-      </div>
-      <div class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae
-        commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!
-      </div>
-      <button class="continue">Continue</button>
-      <button class="cancel">Cancel</button>
-    </div>
+    <div class="container">
+      <div class="modal">
+        <div class="title-closed">
+          <div class="title">
+            <div class="icon">!</div>
+            <div class="header">
+              <strong>Are you sure you want to do that?</strong>
+            </div>
+          </div>
+          <div class="close-button">✖</div>
+        </div>
 
-    <br />
+        <div class="text-btn">
+          <div class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur
+            excepturi id soluta, numquam minima rerum doloremque eveniet
+            aspernatur beatae commodi. Cupiditate recusandae ad repellendus
+            quidem consectetur sequi amet aspernatur cumque!
+          </div>
+          <button class="continue">Continue</button>
+          <button class="cancel">Cancel</button>
+        </div>
+      </div>
 
-    <div class="ancora">
-      <a href="../index.html">Retornar ao índice de exercícios</a>
+      <br />
+
+      <div class="ancora">
+        <a href="../index.html">Retornar ao índice de exercícios</a>
+      </div>
     </div>
   </body>
 </html>
