--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h2>Acesso as aulas</h2>
     <ol>
       <li><a href="./Aula1/index.html">Aula 1 - Fundamentos HTML</a></li>
-      <li><a href="./Aula2/index.html">Aula 2 - Fundamento CSS</a></li>
-      <li><a href="./Aula3/index.html">Aula 3 - FlexBox</a></li>
+      <li><a href="./Aula2/index.html">Aula 2 e 3 - Fundamento CSS</a></li>
+      <li><a href="./Aula3/index.html">Aula 4 e 5 - FlexBox</a></li>
     </ol>
   </body>
 </html>
