--- a/Aula3/exercicios/exec7/exec7.html
+++ b/Aula3/exercicios/exec7/exec7.html
@@ -9,13 +9,13 @@
   <body>
     <div class="header">MEU MARAVILHOSO WEBSITE</div>
 
-    <div class="container">
+    <div class="main">
       <div class="sidebar">
         <ul>
           <li><a href="#">⭐ - link um</a></li>
-          <li><a href="#">󰭃 - link dois</a></li>
-          <li><a href="#">🖌 - link três</a></li>
-          <li><a href="#">󰗡 - link quatro</a></li>
+          <li><a href="#">🦸🏽‍♂️- link dois</a></li>
+          <li><a href="#">🖌️- link três</a></li>
+          <li><a href="#">👌🏽- link quatro</a></li>
           <li><a href="../index.html">Retornar ao índice</a></li>
         </ul>
       </div>
