--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ol>
       <li><a href="./Aula1/index.html">Aula 1 - Fundamentos HTML</a></li>
       <li><a href="./Aula2/index.html">Aula 2 e 3 - Fundamento CSS</a></li>
-      <li><a href="./Aula3/index.html">Aula 4, 5 e 6 - FlexBox</a></li>
+      <li><a href="./Aula3/index.html">Aula 4, 5, 6 e 7 - FlexBox</a></li>
     </ol>
   </body>
 </html>
