--- a/Aula4/exercicios/exec1/exec1.html
+++ b/Aula4/exercicios/exec1/exec1.html
@@ -10,6 +10,9 @@
     <p>
       Faça um algoritmo que receba dois números e exiba o resultado da sua soma.
     </p>
+
+    <p><a href="../../index.html">Retornar ao índice de exercícios</a></p>
+    
     <script>
       let resultado;
       let num1 = Number(prompt("Informe o número 1"));
