--- a/Aula4/exercicios/exec2/exec2.html
+++ b/Aula4/exercicios/exec2/exec2.html
@@ -12,6 +12,8 @@
       subtração, multiplicação e a divisão dos números lidos
     </p>
 
+    <p><a href="../../index.html">Retornar ao índice de exercícios</a></p>
+    
     <script>
       let resultado;
       let num1 = Number(prompt("Digite o primeiro valor"));
