--- a/Aula4/exercicios/exec3/exec3.html
+++ b/Aula4/exercicios/exec3/exec3.html
@@ -13,6 +13,8 @@
       acordo com um percentual informado pelo usuário
     </p>
 
+    <p><a href="../../index.html">Retornar ao índice de exercícios</a></p>
+
     <script>
       let precoCusto, valorVenda, acrescimo, percentual;
 
