--- a/Aula4/exercicios/exec4/exec4.html
+++ b/Aula4/exercicios/exec4/exec4.html
@@ -13,6 +13,8 @@
       e mostre o valor das prestações
     </p>
 
+    <p><a href="../../index.html">Retornar ao índice de exercícios</a></p>
+
     <script>
       let valorCompra = Number(prompt("Informe o valor do produto"));
       let valorParcela = valorCompra / 5;
