--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -8,10 +8,18 @@
   <body>
     <h1>Sumário de exercícios</h1>
     <ul>
+      <li><a href="./exercicios/exec_estacao/index.html">exercício estação</a></li>
+      <li><a href="./exercicios/exec_estacao_switch/index.html">exercício estação com switch</a></li>
       <li><a href="./exercicios/exec1/exec1.html">exercício 1</a></li>
       <li><a href="./exercicios/exec2/exec2.html">exercício 2</a></li>
       <li><a href="./exercicios/exec3/exec3.html">exercício 3</a></li>
       <li><a href="./exercicios/exec4/exec4.html">exercício 4</a></li>
+      <li><a href="./exercicios/exec5/exec5.html">exercício 5</a></li>
+      <li><a href="./exercicios/exec6/exec6.html">exercício 6</a></li>
+      <li><a href="./exercicios/exec7/exec7.html">exercício 7</a></li>
+      <li><a href="./exercicios/exec8/exec8.html">exercício 8</a></li>
+      <li><a href="./exercicios/exec10/exec10.html">exercício 10</a></li>
+      <li><a href="./exercicios/exec11/exec11.html">exercício 11</a></li>
       <li><a href="../index.html">Voltar ao índice de aulas</a></li>
     </ul>
   </body>
