--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="./Aula1/index.html">Aula 1 - Fundamentos HTML</a></li>
       <li><a href="./Aula2/index.html">Aula 2 e 3 - Fundamento CSS</a></li>
       <li><a href="./Aula3/index.html">Aula 4, 5, 6 e 7 - FlexBox</a></li>
-      <li><a href="./Aula4/index.html">Aula 8 - Java Script Básico</a></li>
+      <li><a href="./Aula4/index.html">Aula 8, 9 e 10 - Java Script Básico</a></li>
     </ol>
   </body>
 </html>
