--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -20,6 +20,11 @@
       <li><a href="./exercicios/exec8/exec8.html">exercício 8</a></li>
       <li><a href="./exercicios/exec10/exec10.html">exercício 10</a></li>
       <li><a href="./exercicios/exec11/exec11.html">exercício 11</a></li>
+      <li><a href="./exercicios/exec13/exec13.html">exercício 13</a></li>
+      <li><a href="./exercicios/exec14/exec14.html">exercício 14</a></li>
+      <li><a href="./exercicios/exec15/exec15.html">exercício 15</a></li>
+      <li><a href="./exercicios/exec16/exec16.html">exercício 16</a></li>
+      <li><a href="./exercicios/exec17/exec17.html">exercício 17</a></li>
       <li><a href="../index.html">Voltar ao índice de aulas</a></li>
     </ul>
   </body>
