--- a/Aula4/index.html
+++ b/Aula4/index.html
@@ -25,6 +25,9 @@
       <li><a href="./exercicios/exec15/exec15.html">exercício 15</a></li>
       <li><a href="./exercicios/exec16/exec16.html">exercício 16</a></li>
       <li><a href="./exercicios/exec17/exec17.html">exercício 17</a></li>
+      <li><a href="./exercicios/exec21/exec21.html">exercício 21</a></li>
+      <li><a href="./exercicios/exec22/exec22.html">exercício 22</a></li>
+      <li><a href="./exercicios/exec23/exec23.html">exercício 23</a></li>
       <li><a href="../index.html">Voltar ao índice de aulas</a></li>
     </ul>
   </body>
