--- a/Aula5/exercicios/index.html
+++ b/Aula5/exercicios/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="./exec1/exec1.html">Exercício 1</a></li>
         <li><a href="./exec2/exec2.html">Exercício 2</a></li>
+        <li><a href="../../index.html">Voltar ao índice de aulas</a></li>
     </ul>
 </body>
 </html>
