--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <li><a href="./Aula2/index.html">Aula 2 e 3 - Fundamento CSS</a></li>
       <li><a href="./Aula3/index.html">Aula 4, 5, 6 e 7 - FlexBox</a></li>
       <li><a href="./Aula4/index.html">Aula 8, 9, 10, 11, 12 e 13 - Java Script Básico</a></li>
-      <li><a href="./Aula5/index.html">Aula 13 - CSS Grid</a></li>
+      <li><a href="./Aula5/index.html">Aula 14 - CSS Grid</a></li>
+      <li><a href="./Aula6/index.html">Aula 16 - Java script Avançado</a></li>
     </ol>
   </body>
 </html>
