aula js avancado

--- a/Aula6/index.html
+++ b/Aula6/index.html
@@ -37,8 +37,8 @@
     </form>
     <br/>
     <br/>
-
-    <a href="../index.html">Voltar ao índice de aulas</a>
+    
+    <a href="./exercicios/index.html">Exercícios da aula 6. Clique aqui</a>
 
     <script src="script.js"></script>
   </body>
