--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <li><a href="./Aula3/index.html">Aula 4, 5, 6 e 7 - FlexBox</a></li>
       <li><a href="./Aula4/index.html">Aula 8, 9, 10, 11, 12 e 13 - Java Script Básico</a></li>
       <li><a href="./Aula5/index.html">Aula 14 - CSS Grid</a></li>
-      <li><a href="./Aula6/index.html">Aula 16 - Java script Avançado</a></li>
+      <li><a href="./Aula6/index.html">Aula 16, 17 e 18 - Java script Avançado</a></li>
+      <li><a href="./Aula7/index.html">Aula 19 - React</a></li>
     </ol>
   </body>
 </html>
